   by Wiggles. [MG]
 * @break and @assert now take a /queued switch, which causes the new <action
   list> to be queued instead of run immediately, and an /inline switch which
   gives default behaviour. For Rhost compatability. [MG]
 * Two completely separate, but equally stupid, bugs made @nsprompt show
   nospoof info just like @prompt. [MG]

Functions:
 * colors() returns a list of all known color names known by PennMUSH, and
   info about a particular color. [GM]
 * valid() has two new categories, for validating color names and color code
   sequences for ansi(). [MG]
 * etime() formats elapsed times using the same rules as in WHO. [SW]

Minor changes:
 * The meaning of the COLOR flag has been restored. ANSI flag once again 
   means only highlight is supported, while COLOR means all ANSI 8 colors
   (8*2 including highlight), flash, invert, etc are supported. [GM]
 * Charset negotiation didn't work on MSVC, and now forces iso-8859-1 when
   compiled that way instead. Reported by Daniel Powell. [MG]
 * @config/set and @config/save now log to the wizard_log. Suggested by
   Israphel. [MG]
 * The ICLOC attribute, which was set on newly created players but never used
   in any way, is no longer set. Suggested by Paige. [MG]
 * @destroy'ing, @undestroy'ing, and the actual destruction of players is
   now logged. Suggested by Padraic. [MG]
 * Translation fixes by Stoko.
 * round(4.5,0) behaved differently on Penn than it did on MUX, and
   inconsistantly with rounding to more places on Penn. [SW]
 * The 'On for' and 'Idle' time fields in WHO are smarter and won't overflow
   their space. Suggested by Ari and Paige. [SW]   
 * Add a few new test cases. Requested by Sketch. [MG]
 * It's now possible to clear/reset a prompt with @prompt <player>. [MG]

Fixes:
 * Reordered some checks in tz.c to compile on more distributions. Problem
   reported by Zen@M*U*SH. [MG]
 * Setting an exit Transparent didn't cause its destination's desc to get