@@ -803,6 +803,7 @@ See also: MONITOR, LISTENING
   no_quota *            Has an unlimited quota
   open_anywhere         Can @open an exit from any room.
   pemit_all             Can @pemit to HAVEN/ulocked players.
+  pick_dbref            Can recycle specific garage dbrefs when creating objects.
   player_create         Can use @pcreate command.
   poll                  Can use @poll command.
   pueblo_send           Can use xch_cmd and send pueblo tags
@@ -1059,3 +1060,8 @@ See also: @nspemit, @pemit
   at the connection screen to connect set dark.
   
 See also: DARK, @hide, HIDE POWER
+& PICK_DBREF POWER
+
+  Objects with this power can use the optional dbref arguments to object creation
+  commands to specify garbage objects to reuse, instead of the one at the head of
+  the stack of garbage.
