@@ -272,7 +272,7 @@ FUNTAB flist[] = {
   {"DEFAULT", fun_default, 2, INT_MAX, FN_NOPARSE},
   {"DELETE", fun_delete, 3, 3, FN_REG},
   {"DIE", fun_die, 2, 3, FN_REG | FN_STRIPANSI},
-  {"DIG", fun_dig, 1, 4, FN_REG},
+  {"DIG", fun_dig, 1, 6, FN_REG},
   {"DIGEST", fun_digest, 1, -2, FN_REG},
   {"DIST2D", fun_dist2d, 4, 4, FN_REG | FN_STRIPANSI},
   {"DIST3D", fun_dist3d, 6, 6, FN_REG | FN_STRIPANSI},
@@ -479,7 +479,7 @@ FUNTAB flist[] = {
   {"OBJID", fun_objid, 1, 1, FN_REG | FN_STRIPANSI},
   {"OBJMEM", fun_objmem, 1, 1, FN_REG | FN_STRIPANSI},
   {"OEMIT", fun_oemit, 2, -2, FN_REG},
-  {"OPEN", fun_open, 1, 3, FN_REG},
+  {"OPEN", fun_open, 1, 4, FN_REG},
   {"OR", fun_or, 2, INT_MAX, FN_REG | FN_STRIPANSI},
   {"ORD", fun_ord, 1, 1, FN_REG | FN_STRIPANSI},
   {"ORDINAL", fun_spellnum, 1, 1, FN_REG | FN_STRIPANSI},
