@@ -44,6 +44,8 @@ Commands:
    gives default behaviour. For Rhost compatability. [MG]
  * Two completely separate, but equally stupid, bugs made @nsprompt show
    nospoof info just like @prompt. [MG]
+ * @open, open(), @dig, dig() accept specific garbage dbrefs to use
+   for the exits they make. [SW]
 
 Functions:
  * colors() returns a list of all known color names known by PennMUSH, and
@@ -71,6 +73,8 @@ Minor changes:
    their space. Suggested by Ari and Paige. [SW]   
  * Add a few new test cases. Requested by Sketch. [MG]
  * It's now possible to clear/reset a prompt with @prompt <player>. [MG]
+ * New Pick_Dbref @power for specifying specific garbage dbrefs to use in
+   @create and friends. [SW]
 
 Fixes:
  * Reordered some checks in tz.c to compile on more distributions. Problem
